fix: reposition page_header textcontent, add whitespace nowrap to button elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,11 +238,16 @@ img {
 }
 @media screen and (max-width: 667px) {
   .hero_content {
-    font-size: 3.5rem;
+    font-size: 3.3rem;
   }
 }
 .hero_content span {
   font-size: 4.5rem;
+}
+@media screen and (max-width: 667px) {
+  .hero_content span {
+    font-size: 3.3rem;
+  }
 }
 .hero_content span:first-of-type {
   font-weight: 800;
@@ -256,6 +261,7 @@ img {
   .hero_text {
     width: -moz-fit-content;
     width: fit-content;
+    padding: 2rem 0;
   }
 }
 .hero_text span {
@@ -322,6 +328,12 @@ img {
   }
 }
 
+@media screen and (max-width: 667px) {
+  .carousel_wrapper {
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+  }
+}
 .carousel_title {
   display: flex;
   justify-content: space-between;
@@ -831,6 +843,14 @@ img {
   align-items: center;
   gap: 1.5rem;
 }
+@media screen and (max-width: 667px) {
+  .pageheader_header {
+    width: 80%;
+  }
+}
+.pageheader_header p {
+  text-align: center;
+}
 .pageheader_header-contact {
   position: relative;
   top: 0;
@@ -849,6 +869,7 @@ img {
   gap: 2rem;
   align-items: center;
   font-size: 1.6rem;
+  flex-wrap: wrap;
 }
 .pageheader_crumps i {
   font-size: 1.4rem;
@@ -861,7 +882,7 @@ img {
 }
 @media screen and (max-width: 740px) {
   .pageheader_title {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -1077,6 +1098,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.btn span {
+  white-space: nowrap;
 }
 .btn-black {
   background: var(--neutral-level-7);
@@ -1765,7 +1789,7 @@ img {
 }
 @media screen and (max-width: 667px) {
   .header_icons {
-    display: none;
+    margin-left: auto;
   }
 }
 .header_icon {
@@ -1866,10 +1890,11 @@ img {
 .newsletter_form {
   border-bottom: 1px solid var(--neutral-level-4);
   display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 667px) {
   .newsletter_form {
-    width: 100%;
+    width: auto;
     padding-bottom: 1.5rem;
   }
 }
@@ -1878,6 +1903,7 @@ img {
   width: 40rem;
   padding: 1.2rem;
   display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 667px) {
   .newsletter_form form {
@@ -1890,7 +1916,7 @@ img {
   border: none;
   padding-left: 1rem;
   width: 100%;
-  background-color: var(--neutral-level-2);
+  background-color: var(--neutral-level-3);
 }
 @media screen and (max-width: 667px) {
   .newsletter_form form input {
@@ -1899,7 +1925,7 @@ img {
   }
 }
 .newsletter_form form button {
-  background-color: var(--neutral-level-2);
+  background-color: var(--neutral-level-3);
   border: none;
   outline: none;
   transition: all 0.2s;
