--- a/assets/sass/components/_button.sass
+++ b/assets/sass/components/_button.sass
@@ -7,6 +7,8 @@
   display: flex
   align-items: center
   justify-content: center
+  span
+    white-space: nowrap
   &-black
     background: var(--neutral-level-7)
     span
