--- a/assets/sass/components/_pageheader.sass
+++ b/assets/sass/components/_pageheader.sass
@@ -25,6 +25,10 @@
     flex-direction: column
     align-items: center
     gap: 1.5rem
+    @media  screen and (max-width: 667px)
+      width: 80%
+    p
+      text-align: center
     &-contact
       position: relative
       top: 0
@@ -39,6 +43,7 @@
     gap: 2rem
     align-items: center
     font-size: 1.6rem
+    flex-wrap: wrap
     i
       font-size: 1.4rem
   &_crump, i
@@ -47,4 +52,4 @@
   &_title
     font-size: 5rem
     @media  screen and (max-width: 740px)
-      font-size: 2.5rem
+      font-size: 3.5rem
