--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -66,7 +66,8 @@
     gap: 2rem
     align-items: center
     @media  screen and (max-width: 667px)
-      display: none
+      // display: none
+      margin-left: auto
   &_icon
     display: flex
     align-items: center
