--- a/assets/sass/layout/_newsletter.sass
+++ b/assets/sass/layout/_newsletter.sass
@@ -29,14 +29,16 @@
   &_form
     border-bottom: 1px solid var(--neutral-level-4)
     display: flex
+    align-items: center
     @media  screen and (max-width: 667px)
-      width: 100%
+      width: auto
       padding-bottom: 1.5rem
     form
       margin-top: 2rem
       width: 40rem
       padding: 1.2rem
       display: flex
+      align-items: center
       @media  screen and (max-width: 667px)
         width: 100% 
         white-space: nowrap
@@ -45,12 +47,12 @@
         border: none
         padding-left: 1rem
         width: 100%
-        background-color: var(--neutral-level-2)
+        background-color: var(--neutral-level-3)
         @media  screen and (max-width: 667px)
           width: 80%
           padding: 1.2rem
       button
-        background-color: var(--neutral-level-2)
+        background-color: var(--neutral-level-3)
         border: none
         outline: none
         transition: all .2s
@@ -58,3 +60,4 @@
           scale: 1.05
           cursor: pointer
           transition: all .2s
+        
